sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:17: error: not found: value sorted
  } while(ecart > 1 || ! sorted )
                         ^